[package]
name = "ranim"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A rust animation library"
repository = "https://github.com/franticxx/ranim.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
